# thermostat

./: LICENSE  README.md
client/: .gitignore  EasyPact.c  EasyPact.h  MainWindows.cpp  MainWindows.h  MainWindows.ui  WaveformDisplay.cpp  WaveformDisplay.h  client.pro  main.cpp  widget.cpp  widget.h
control/hardwork/: thermostat_hardwork.epro
control/software/components/OLED/: OLED.c
control/software/components/OLED/include/: OLED.h
control/software/components/interrupt/: CMakeLists.txt  interrupt.c  interrupt.h
control/software/components/mqtt_task/: CMakeLists.txt  mqtt_task.c  mqtt_task.h
control/software/components/nvs/: CMakeLists.txt  nvs.c  nvs.h
control/software/components/pid/: CMakeLists.txt  PID.c  PID.h
control/software/components/temperature/: CMakeLists.txt  driver_ds18b20_interface.c  ds18b20.c  temperature.c  temperature.h
control/software/components/uart/: CMakeLists.txt  EasyPact.c  EasyPact.h  uart.c  uart.h
control/software/components/wifi/: CMakeLists.txt  wifi.c  wifi.h
control/software/main/: CMakeLists.txt  main.c
